--- a/index.css
+++ b/index.css
@@ -1,7 +1,11 @@
-
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; 
+}
 .nav{
   display: flex;
-  height: 100px;
+  height: 90px;
   justify-content: space-between;
 
 }
@@ -13,7 +17,7 @@
   font-family: sans-serif;
 }
 .nav-links{
-  margin-top: 30px;
+  margin-top: 10px;
 }
 .name{
   color: blue;
@@ -24,22 +28,20 @@
   border-radius: 10px;
   background-color: skyblue;
   padding: 10px;
-  height: 30px;
+  height: 20px;
   width: 120px;
   text-align: center;
   margin: 15px;
 }
 .hero{
  height: 100vh;
-  overflow: hidden;
-  padding: 10px;
+  
 }
 
 .left{
   text-align: left;
-  font-size: 40px;
+  font-size: 35px;
   margin-left: 80px;
-  padding: 10px;
    color: rgb(49, 44, 44);
    float: left;
    width: 40%;
@@ -53,7 +55,7 @@ p{
   color: aliceblue;
   background-color: rgb(32, 137, 178);
   padding: 20px;
-  height: 80px;
+  height: 70px;
   width: 300px;
   font-size: large;
  font-weight: bold;
