--- a/index.css
+++ b/index.css
@@ -63,6 +63,9 @@ body {
     font-size: 10px;
   }
 }
+h1{
+  margin-top:5px;
+}
 p{
   font-size: 30px;
   color: gray;
@@ -74,7 +77,7 @@ p{
 }
 @media(max-width:500px){
   p{
-    font-size: 15px;
+    font-size: 10px;
   }
 }
 .btn{
